--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,7 +18,7 @@
     }
 
     div.content-ckeditor h2,h3,h4,h5 {
-        @apply font-bold text-2xl text-gray-800 dark:text-gray-300;
+        @apply font-medium text-2xl text-gray-800 dark:text-gray-300;
     }
 
     div.content-ckeditor img {
@@ -26,7 +26,7 @@
     }
 
     div.content-ckeditor h2,h3,h4,h5 {
-        @apply font-bold text-2xl text-gray-800 dark:text-gray-300;
+        @apply font-medium text-2xl text-gray-800 dark:text-gray-300;
     }
 
     div.content-ckeditor figure:has(table) {
@@ -87,7 +87,7 @@
     }
 
     div#preview h2,h3,h4,h5, div#body h2,h3,h4,h5 {
-        @apply font-bold text-2xl text-gray-800 dark:text-gray-300;
+        @apply font-medium text-2xl text-gray-800 dark:text-gray-300;
     }
 
     div#preview figure:has(table), div#body figure:has(table) {
